# Oxi-Calc

./: .gitignore  Cargo.toml  README.md  build.rs
example_data/: Yeet3_graph.py  heights.csv
src/: expression_util.rs  file_util.rs  graph_maker_util.rs  main.rs  number_conversion_util.rs  statistics_util.rs  unit_conversion_util.rs
src/func_expr_util/: expr_types.rs  interp_expr.rs  mod.rs  parse_expr.rs
ui/: appwindow.slint  data_graphing.slint  expression_calculator.slint  number_converter.slint  stats_calc.slint  unit_converter.slint
