[package]
name = "math-calc"
version = "0.1.0"
authors = ["Joren Larm <jedilarm@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse_int = "0.6.0"
rfd = "0.14.1"
slint = "1.5"

[build-dependencies]
slint-build = "1.5"
