[package]
name = "math-calc"
version = "0.1.0"
authors = ["Joren Larm <jedilarm@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
math_utils_lib = "0.3.1"
parse_int = "0.6.0"
plotpy = "0.6.3"
rand = "0.8.5"
rfd = "0.14.1"
slint = "1.5"

[build-dependencies]
slint-build = "1.5"
jui = "0.1.16"
